--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -15,7 +15,7 @@
             android:padding="5dp"
             android:background="@color/white"
             android:clickable="true"
-            android:id="@+id/home_img_button_my_account"
+            android:id="@+id/home_img_button_change_password"
             android:scaleType="fitCenter"
             />
         <TextView
@@ -25,69 +25,49 @@
             android:textColor="@color/skin"
             android:gravity="center"
             android:layout_marginRight="60dp"
-            android:text="@string/title_my_account"
+            android:text="@string/password_ma"
             />
     </android.support.v7.widget.Toolbar>
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:paddingLeft="30dp"
+        android:paddingLeft="20dp"
         android:paddingTop="30dp"
         android:paddingRight="30dp"
         android:paddingBottom="10dp"
         android:layout_height="wrap_content">
         <TextView
-            android:layout_width="120dp"
-            android:text="@string/email_ma"
-            style="@style/Base.TextAppearance.AppCompat.Large"
+            android:layout_width="150dp"
+            android:text="@string/old_password_ma_cp"
+            style="@style/Base.TextAppearance.AppCompat.Medium"
+            android:textColor="@color/black"
             android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/email_baker_ma"
-            android:layout_width="match_parent"
-            android:text="@string/default_val_so"
-            android:textColor="@color/purple"
-            style="@style/Base.TextAppearance.AppCompat.Large"
-            android:layout_height="wrap_content" />
+        <EditText
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:id="@+id/old_password_cp"
+            android:hint="@string/edit_old_password_ma_cp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:paddingBottom="10dp"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="120dp"
-            android:text="@string/phone_ma"
-            style="@style/Base.TextAppearance.AppCompat.Large"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/phone_baker_ma"
-            android:layout_width="match_parent"
-            android:text="@string/default_val_so"
-            android:textColor="@color/purple"
-            style="@style/Base.TextAppearance.AppCompat.Large"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:paddingLeft="30dp"
+        android:paddingLeft="20dp"
         android:paddingRight="30dp"
         android:paddingBottom="30dp"
         android:layout_height="wrap_content">
         <TextView
-            android:layout_width="120dp"
-            android:text="@string/address_ma"
-            style="@style/Base.TextAppearance.AppCompat.Large"
+            android:layout_width="150dp"
+            android:text="@string/new_password_ma_cp"
+            style="@style/Base.TextAppearance.AppCompat.Medium"
+            android:textColor="@color/black"
             android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/address_baker_ma"
-            android:layout_width="match_parent"
-            style="@style/Base.TextAppearance.AppCompat.Large"
-            android:text="@string/default_val_so"
-            android:textColor="@color/purple"
-            android:layout_height="wrap_content" />
+        <EditText
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:id="@+id/new_password_cp"
+            android:hint="@string/edit_new_password_ma_cp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -101,8 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="70dp"
             android:layout_marginRight="70dp"
-            android:text="@string/password_ma"
-            android:onClick="changePassword" />
+            android:text="@string/submit_change_password_ma_cp"
+            android:onClick="submitChangePassword" />
     </LinearLayout>
-
 </LinearLayout>
