--- a/app/src/main/res/layout/list_order_history.xml
+++ b/app/src/main/res/layout/list_order_history.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    style="@style/Base.ThemeOverlay.AppCompat.ActionBar"
     android:layout_height="wrap_content">
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -21,8 +22,8 @@
             android:layout_height="match_parent">
             <android.support.v7.widget.Toolbar
                 android:layout_width="match_parent"
-                android:id="@+id/toolbar_menu_oh"
                 android:layout_height="wrap_content"
+                android:id="@+id/toolbar_menu_oh"
                 android:background="@color/purple">
                 <TextView
                     android:layout_width="wrap_content"
@@ -31,10 +32,10 @@
                     style="@style/Base.TextAppearance.AppCompat.Medium"
                     android:text="@string/order_id"/>
                 <TextView
-                    android:layout_width="100dp"
+                    android:layout_width="95dp"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
                     android:textColor="@color/white"
+                    android:paddingLeft="5dp"
                     android:id="@+id/order_id_order_history"
                     style="@style/Base.TextAppearance.AppCompat.Medium"
                     />
@@ -44,7 +45,7 @@
                     android:textColor="@color/white"
                     android:padding="5dp"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginRight="10dp"
+                    android:textAlignment="center"
                     android:id="@+id/order_status_oh"
                     android:background="@color/orange"
                     android:text="@string/order_status"
@@ -111,17 +112,20 @@
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:paddingLeft="10dp"
-                android:paddingBottom="5dp"
+                android:paddingBottom="10dp"
                 android:layout_height="wrap_content">
                 <TextView
                     android:layout_width="wrap_content"
                     android:text="@string/phone_number"
+                    android:textSize="15dp"
                     style="@style/Base.TextAppearance.AppCompat.Small"
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/phone_no_oh"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="15dp"
                     style="@style/Base.TextAppearance.AppCompat.Small"/>
 
             </LinearLayout>
@@ -129,17 +133,19 @@
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:paddingLeft="10dp"
-                android:paddingBottom="5dp"
+                android:paddingBottom="10dp"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="130dp"
                     android:text="@string/pickup_location"
+                    android:textSize="15dp"
                     style="@style/Base.TextAppearance.AppCompat.Small"
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_marginLeft="80dp"
-                    android:text="@string/drop_location"
+                    android:textSize="15dp"
+                    android:id="@+id/pickup_location_oh"
+                    android:layout_marginRight="10dp"
                     style="@style/Base.TextAppearance.AppCompat.Small"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
@@ -150,13 +156,16 @@
                 android:paddingBottom="10dp"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:layout_width="170dp"
-                    android:id="@+id/pickup_location_oh"
+                    android:layout_width="130dp"
+                    android:textSize="15dp"
+                    android:text="@string/drop_location"
                     style="@style/Base.TextAppearance.AppCompat.Small"
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:id="@+id/drop_location_oh"
+                    android:layout_marginRight="10dp"
+                    android:textSize="15dp"
                     style="@style/Base.TextAppearance.AppCompat.Small"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
