--- a/app/src/main/res/menu/menu_oh.xml
+++ b/app/src/main/res/menu/menu_oh.xml
@@ -7,6 +7,11 @@
         android:orderInCategory="100"
         android:title="@string/order_details_menu"
         app:showAsAction="never" />
-
+    <item
+        android:id="@+id/action_change_status_oh"
+        android:orderInCategory="200"
+        android:title="@string/change_status_menu"
+        app:showAsAction="never"
+        />
 </menu>
 
