UI adjustmenst done similar to Baker

--- a/app/src/main/res/layout/baker_specific_order.xml
+++ b/app/src/main/res/layout/baker_specific_order.xml
@@ -30,7 +30,6 @@
     </android.support.v7.widget.Toolbar>
     <LinearLayout
         android:layout_width="match_parent"
-        android:padding="10dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
@@ -41,7 +40,7 @@
             android:layout_width="100dp"
             style="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="@string/cake_so"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:layout_height="wrap_content" />
         <TextView
             android:paddingTop="10dp"
@@ -54,7 +53,6 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:padding="10dp"
         android:layout_marginLeft="30dp"
         android:orientation="horizontal"
         android:layout_height="wrap_content">
@@ -64,7 +62,7 @@
             android:layout_width="100dp"
             style="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="@string/pickup_so"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:layout_height="wrap_content" />
         <TextView
             android:paddingTop="10dp"
@@ -77,7 +75,6 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:padding="10dp"
         android:layout_marginLeft="30dp"
         android:orientation="horizontal"
         android:layout_height="wrap_content">
@@ -87,7 +84,7 @@
             android:layout_width="100dp"
             style="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="@string/customer_so"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:layout_height="wrap_content" />
         <TextView
             android:paddingTop="10dp"
@@ -100,7 +97,6 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:padding="10dp"
         android:layout_marginLeft="30dp"
         android:orientation="horizontal"
         android:layout_height="wrap_content">
@@ -110,7 +106,7 @@
             android:layout_width="100dp"
             style="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="@string/phone_so"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:layout_height="wrap_content" />
         <TextView
             android:paddingTop="10dp"
@@ -123,7 +119,6 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:padding="10dp"
         android:layout_marginLeft="30dp"
         android:orientation="horizontal"
         android:layout_height="wrap_content">
@@ -133,7 +128,7 @@
             android:layout_width="100dp"
             style="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="@string/address_so"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:layout_height="wrap_content" />
         <TextView
             android:paddingTop="10dp"
@@ -146,7 +141,6 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:padding="10dp"
         android:layout_marginLeft="30dp"
         android:orientation="horizontal"
         android:layout_height="wrap_content">
@@ -156,7 +150,7 @@
             android:layout_width="100dp"
             style="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="@string/drop_so"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:layout_height="wrap_content" />
         <TextView
             android:paddingTop="10dp"
