--- a/app/src/main/res/menu/menu_oh.xml
+++ b/app/src/main/res/menu/menu_oh.xml
@@ -13,5 +13,11 @@
         android:title="@string/change_status_menu"
         app:showAsAction="never"
         />
+    <item
+        android:id="@+id/action_start_order"
+        android:orderInCategory="300"
+        android:title="@string/action_start_order"
+        app:showAsAction="never"
+        />
 </menu>
 
