--- a/app/src/main/res/layout/list_order_history.xml
+++ b/app/src/main/res/layout/list_order_history.xml
@@ -29,7 +29,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
-                    style="@style/Base.TextAppearance.AppCompat.Medium"
+                    style="@style/Base.TextAppearance.AppCompat.Small"
                     android:text="@string/order_id"/>
                 <TextView
                     android:layout_width="95dp"
@@ -37,7 +37,7 @@
                     android:textColor="@color/white"
                     android:paddingLeft="5dp"
                     android:id="@+id/order_id_order_history"
-                    style="@style/Base.TextAppearance.AppCompat.Medium"
+                    style="@style/Base.TextAppearance.AppCompat.Small"
                     />
                 <TextView
                     android:layout_width="wrap_content"
@@ -49,7 +49,7 @@
                     android:id="@+id/order_status_oh"
                     android:background="@color/orange"
                     android:text="@string/order_status"
-                    style="@style/Base.TextAppearance.AppCompat.Medium"
+                    style="@style/Base.TextAppearance.AppCompat.Small"
 
                     />
 
@@ -96,16 +96,16 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:text="@string/customer_name"
-                    android:textColor="@color/black"
-                    style="@style/Base.TextAppearance.AppCompat.Medium"
+                    android:textSize="15dp"
+                    style="@style/Base.TextAppearance.AppCompat.Small"
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
+                    android:textSize="15dp"
                     android:id="@+id/customer_name_oh"
-                    android:paddingLeft="10dp"
-                    style="@style/Base.TextAppearance.AppCompat.Medium"/>
+                    android:layout_marginLeft="18dp"
+                    style="@style/Base.TextAppearance.AppCompat.Small"/>
 
             </LinearLayout>
             <LinearLayout
@@ -124,7 +124,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/phone_no_oh"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="60dp"
                     android:textSize="15dp"
                     style="@style/Base.TextAppearance.AppCompat.Small"/>
 
