--- a/app/src/main/res/layout/activity_change_order_status.xml
+++ b/app/src/main/res/layout/activity_change_order_status.xml
@@ -47,6 +47,7 @@
             android:layout_width="match_parent"
             android:id="@+id/ready_status"
             android:layout_margin="10dp"
+            android:buttonTint="@color/global_text"
             android:text="@string/delivered_status"
             android:checked="true"
             android:layout_height="wrap_content" />
