--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#845a9a</color>
+    <color name="colorPrimaryDark">#662d91</color>
     <color name="colorAccent">#c84040</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
-    <color name="purple">#845a9a</color>
+    <color name="purple">#662d91</color>
     <color name="grey">#f2f2f2</color>
     <color name="input_color">#FF4081</color>
     <color name="skin">#FF948C</color>
@@ -13,4 +13,7 @@
 
     <color name="black_overlay">#80000000</color>
     <color name="white_overlay">#80ffffff</color>
+    <!--New colors-->
+    <color name="global_bg">#e7e7e7</color>
+    <color name="global_text">#777777</color>
 </resources>
